--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
           version: "5.0.0-beta2"
           
       - name: Run Premake
-        working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: cd .premake; dir
+        working-directory: ${{env.GITHUB_WORKSPACE}}/.premake
+        run: dir
         
       - name: Add MSBuild to PATH
         uses: microsoft/setup-msbuild@v1.0.2
