--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           
       - name: Run Premake
         working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: call .premake/premake5.exe vs2022
+        run: .premake/premake5.exe vs2022
         
       - name: Add MSBuild to PATH
         uses: microsoft/setup-msbuild@v1.0.2
