--- a/.github/workflows/build-master-release.yml
+++ b/.github/workflows/build-master-release.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Fetch our code
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
         
       - name: Setup Premake
         uses: abel0b/setup-premake@v2.1
