--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "Engine/vendor/imgui"]
 	path = Engine/vendor/imgui
 	url = https://github.com/nepp95/imgui.git
+[submodule "Engine/vendor/entt"]
+	path = Engine/vendor/entt
+	url = https://github.com/nepp95/entt.git
+[submodule "Engine/vendor/yaml-cpp"]
+	path = Engine/vendor/yaml-cpp
+	url = https://github.com/nepp95/yaml-cpp.git
