--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -9,27 +9,35 @@ Size=1280,720
 Collapsed=0
 
 [Window][Statistics]
-Pos=910,19
-Size=370,434
+Pos=1034,19
+Size=246,445
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Settings]
-Pos=910,455
-Size=370,265
+Pos=1034,466
+Size=246,254
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Viewport]
-Pos=0,19
-Size=908,701
+Pos=237,19
+Size=795,701
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000006,0
+
+[Window][Scene Hierarchy]
+Pos=0,19
+Size=235,701
+Collapsed=0
+DockId=0x00000005,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=86,128 Size=1280,701 Split=X
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=908,701 CentralNode=1 Selected=0x13926F0B
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=370,701 Split=Y Selected=0x47E8F9DC
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=232,434 Selected=0x47E8F9DC
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=232,265 Selected=0x54723243
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=112,154 Size=1280,701 Split=X
+  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=1032,701 Split=X
+    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=235,701 HiddenTabBar=1 Selected=0x2E9237F7
+    DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=795,701 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=246,701 Split=Y Selected=0x47E8F9DC
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=246,445 HiddenTabBar=1 Selected=0x47E8F9DC
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=246,254 HiddenTabBar=1 Selected=0x54723243
 
