--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -28,16 +28,24 @@ DockId=0x00000006,0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=235,701
+Size=235,296
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000007,0
+
+[Window][Properties]
+Pos=0,317
+Size=235,403
+Collapsed=0
+DockId=0x00000008,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=112,154 Size=1280,701 Split=X
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=1032,701 Split=X
-    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=235,701 HiddenTabBar=1 Selected=0x2E9237F7
-    DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=795,701 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=246,701 Split=Y Selected=0x47E8F9DC
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=246,445 HiddenTabBar=1 Selected=0x47E8F9DC
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=246,254 HiddenTabBar=1 Selected=0x54723243
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=60,102 Size=1280,701 Split=X
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1032,701 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=235,701 Split=Y Selected=0x2E9237F7
+      DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=235,296 HiddenTabBar=1 Selected=0x2E9237F7
+      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=235,403 Selected=0x199AB496
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=795,701 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=246,701 Split=Y Selected=0x47E8F9DC
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=246,445 HiddenTabBar=1 Selected=0x47E8F9DC
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=246,254 HiddenTabBar=1 Selected=0x54723243
 
