--- a/.github/workflows/build-dev-debug.yml
+++ b/.github/workflows/build-dev-debug.yml
@@ -13,6 +13,13 @@ jobs:
     runs-on: windows-latest
 
     steps:
+      - name: Cache submodules
+        id: submodule-cache
+        uses: actions/cache@v3.0.11
+        with:
+          path: vendor
+          key: cache-submodule
+
       - name: Fetch our code
         uses: actions/checkout@v3
         with:
