--- a/.github/workflows/build-dev-debug.yml
+++ b/.github/workflows/build-dev-debug.yml
@@ -17,7 +17,7 @@ jobs:
         id: submodule-cache
         uses: actions/cache@v3.0.11
         with:
-          path: vendor
+          path: Engine/vendor
           key: cache-submodule
 
       - name: Fetch our code
