--- a/.github/workflows/build-dev-debug.yml
+++ b/.github/workflows/build-dev-debug.yml
@@ -20,11 +20,16 @@ jobs:
           path: Engine/vendor
           key: cache-submodule
 
-      - name: Fetch our code
+      - name: Clone repo with submodules
+        if: steps.submodule-cache.outputs.cache-hit != 'true'
         uses: actions/checkout@v3
         with:
           submodules: recursive
-          
+
+      - name: Clone repo (submodules cached)
+        if: steps.submodule-cache.outputs.cache-hit == 'true'
+        uses: actions/checkout@v3
+
       - name: Cache premake
         id: premake-cache
         uses: actions/cache@v3.0.11
