--- a/.github/workflows/build-dev-release.yml
+++ b/.github/workflows/build-dev-release.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Fetch our code
+      - name: Clone repo with submodules
         uses: actions/checkout@v3
         with:
           submodules: recursive
