Seperated debug information to it's own panel

--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -15,14 +15,14 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Settings]
-Pos=1550,683
-Size=370,378
+Pos=1550,19
+Size=370,1042
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Viewport]
 Pos=372,19
-Size=1176,1042
+Size=1548,1042
 Collapsed=0
 DockId=0x00000006,0
 
@@ -37,6 +37,11 @@ Pos=0,461
 Size=370,600
 Collapsed=0
 DockId=0x00000008,0
+
+[Window][Debug]
+Pos=1489,122
+Size=287,220
+Collapsed=0
 
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=8,50 Size=1920,1042 Split=X
