Added play and stop button
-Removed the menu items for play/stop
-Removed the menu item for asssembly reload since this is auto reloaded

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ EpEditor/Profile.json
 /vendor/premake/bin
 /EpEditor/Resources/Scripts
 /EpEditor/Scripts/Intermediates
+/EpEditor/Resources/**/Raw
