--- a/EpEditor/imgui.ini
+++ b/EpEditor/imgui.ini
@@ -21,20 +21,20 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Viewport]
-Pos=372,19
-Size=1548,1042
+Pos=371,53
+Size=1549,1008
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000001,0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=370,440
+Size=369,410
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
-Pos=0,461
-Size=370,600
+Pos=0,431
+Size=369,630
 Collapsed=0
 DockId=0x00000008,0
 
@@ -43,14 +43,22 @@ Pos=1489,122
 Size=287,220
 Collapsed=0
 
+[Window][Scene Control]
+Pos=371,19
+Size=1549,32
+Collapsed=0
+DockId=0x00000009,0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=8,50 Size=1920,1042 Split=X
-  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1548,701 Split=X
-    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=370,701 Split=Y Selected=0x2E9237F7
-      DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=235,296 HiddenTabBar=1 Selected=0x2E9237F7
-      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=235,403 Selected=0x199AB496
-    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1176,701 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=370,701 Split=Y Selected=0x47E8F9DC
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=246,445 HiddenTabBar=1 Selected=0x47E8F9DC
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=246,254 HiddenTabBar=1 Selected=0x54723243
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=8,50 Size=1920,1042 Split=X
+  DockNode        ID=0x00000005 Parent=0x3BC79352 SizeRef=369,1042 Split=Y Selected=0x2E9237F7
+    DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=369,410 Selected=0x2E9237F7
+    DockNode      ID=0x00000008 Parent=0x00000005 SizeRef=369,630 Selected=0x199AB496
+  DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=1549,1042 Split=Y
+    DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=1920,32 HiddenTabBar=1 Selected=0x5811277B
+    DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=1920,1008 Split=X
+      DockNode    ID=0x00000001 Parent=0x0000000A SizeRef=1548,701 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+      DockNode    ID=0x00000002 Parent=0x0000000A SizeRef=370,701 Split=Y Selected=0x47E8F9DC
+        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=246,445 HiddenTabBar=1 Selected=0x47E8F9DC
+        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=246,254 HiddenTabBar=1 Selected=0x54723243
 
